add wip quests tab with gilded bucket quest

--- a/index.html
+++ b/index.html
@@ -126,6 +126,20 @@
             <li class="nav-item" role="presentation">
               <button
                 class="nav-link"
+                id="quests-tab"
+                data-bs-toggle="tab"
+                data-bs-target="#quests-tab-pane"
+                type="button"
+                role="tab"
+                aria-controls="quests-tab-pane"
+                aria-selected="false"
+              >
+                <span>Quests</span> <small>(WIP)</small>
+              </button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button
+                class="nav-link"
                 id="checklists-tab"
                 data-bs-toggle="tab"
                 data-bs-target="#checklists-tab-pane"
@@ -2619,6 +2633,143 @@
         </div>
 
         <div
+          id="quests-tab-pane"
+          class="tab-pane fade"
+          role="tabpanel"
+          aria-labelledby="quests-tab"
+          tabindex="0"
+        >
+          <div class="page-layout">
+            <div class="table-of-contents">
+              <h6>Table of Contents</h6>
+              <hr />
+              <ul>
+                <li>
+                  <a href="#The_Way_of_the_Bucket">The Way of the Bucket</a>
+                  <span id="quests_nav_totals_1"></span>
+                </li>
+              </ul>
+            </div>
+
+            <div class="page-content">
+              <h2>
+                Quests
+                <span id="quests_overall_total"></span>
+              </h2>
+
+              <section id="The_Way_of_the_Bucket_section">
+                <h3 id="The_Way_of_the_Bucket">
+                  <a
+                    href="#The_Way_of_the_Bucket_col"
+                    data-bs-toggle="collapse"
+                    role="button"
+                    aria-expanded="true"
+                    aria-controls="The_Way_of_the_Bucket_col"
+                    class="btn-collapse"
+                    ><span class="material-icons">expand_more</span></a
+                  >
+                  <a
+                    href="https://thelordsofthefallen.wiki.fextralife.com/The+Way+of+the+Bucket"
+                    target="_blank"
+                    >The Way of the Bucket</a
+                  >
+                  <span id="quests_totals_1"></span>
+                </h3>
+                <ul id="The_Way_of_the_Bucket_col" class="collapse show">
+                  <li data-id="quests_1_1">
+                    Obtain the Bucketlord's Salute in Pilgrim's Perch
+                  </li>
+                  <li data-id="quests_1_2">
+                    Obtain the Broken Bucket in Pilgrim's Perch (next to the
+                    Bucketlord)
+                  </li>
+                  <li data-id="quests_1_3">
+                    Speak to the Bucketlord in Pilgrim's Perch
+                  </li>
+                  <li data-id="quests_1_4">
+                    Unequip all of your gear (including ammunition, throwables,
+                    spells, etc), equip the Broken Bucket in your main hand, and
+                    use the following gestures to the Bucketlord, in order:
+                    <ul>
+                      <li data-id="quests_1_4_1">Greeting</li>
+                      <li data-id="quests_1_4_2">Pointing Downward</li>
+                      <li data-id="quests_1_4_3">Bucketlord's Salute</li>
+                    </ul>
+                  </li>
+                  <li data-id="quests_1_5">
+                    Speak to the Bucketlord again, and he should say "The pride
+                    of the Bucketlords has been reaffirmed."
+                  </li>
+                  <li data-id="quests_1_6">
+                    Defeat the Scourged Sister Delyth in Pilgrim's Perch to
+                    obtain a Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_7">
+                    Defeat the Gentle Gaverus, Mistress of Hounds in Pilgrim's
+                    Perch to obtain a Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_8">
+                    Defeat the Crimson Rector Percival in Fitzroy's Gorge to
+                    obtain a Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_9">
+                    Defeat the Ruiner at Fitzroy's Gorge to obtain a Pride of
+                    the Bucketlords
+                  </li>
+                  <li data-id="quests_1_10">
+                    <b>NOTE:</b> Deliver the first set of 4 buckets to the
+                    Bucketlord to receive the Bucketlord Shoes
+                  </li>
+                  <li data-id="quests_1_11">
+                    Defeat the Infernal Enchantress in Lower Calrath to obtain a
+                    Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_12">
+                    Defeat the Skinstealer in Cistern to obtain a Pride of the
+                    Bucketlords
+                  </li>
+                  <li data-id="quests_1_13">
+                    Defeat the Kinrangr Guardian Folard in Fief of the Chill
+                    Curse to obtain a Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_14">
+                    Defeat the Griefbound Rowena in Fief of the Chill Curse to
+                    obtain a Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_15">
+                    <b>NOTE:</b> Deliver the second set of 4 buckets to the
+                    Bucketlord to receive the Bucketlord Helm
+                  </li>
+                  <li data-id="quests_1_16">
+                    Defeat the Sacred Resonance of Tenacity in Pilgrim's Perch
+                    (Bellroom) to obtain a Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_17">
+                    Defeat the Abiding Defenders in Manse of the Hallowed
+                    Brothers (Leprosarium) to obtain a Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_18">
+                    Defeat the Carrion Knight in Tower of Penance to obtain a
+                    Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_19">
+                    Defeat the Abbess Ursula in Abbey of the Hallowed Sisters to
+                    obtain a Pride of the Bucketlords
+                  </li>
+                  <li data-id="quests_1_20">
+                    <b>NOTE:</b> Deliver the last set of 4 buckets to the
+                    Bucketlord, and he'll say "Seek Gold Amidst Flames"
+                  </li>
+                  <li data-id="quests_1_21">
+                    Find the Guilded Bucket in Lower Calrath
+                  </li>
+                </ul>
+              </section>
+            </div>
+          </div>
+        </div>
+
+        <div
           class="tab-pane fade"
           id="checklists-tab-pane"
           role="tabpanel"
@@ -2663,7 +2814,7 @@
                   <span id="checklist_nav_totals_7"></span>
                 </li>
                 <li>
-                  <a href="#Quests">Quests</a>
+                  <a href="#Questlist">Quests</a>
                   <span id="checklist_nav_totals_8"></span>
                 </li>
                 <li>
@@ -8970,14 +9121,14 @@
                 </div>
               </section>
 
-              <section id="Quests_section">
-                <h3 id="Quests">
+              <section id="Questlist_section">
+                <h3 id="Questlist">
                   <a
-                    href="#Quests_col"
+                    href="#Questlist_col"
                     data-bs-toggle="collapse"
                     role="button"
                     aria-expanded="true"
-                    aria-controls="Quests_col"
+                    aria-controls="Questlist_col"
                     class="btn-collapse"
                     ><span class="material-icons">expand_more</span></a
                   >
@@ -8985,7 +9136,7 @@
                   <span id="checklist_totals_8"></span>
                 </h3>
 
-                <div id="Quests_col" class="row collapse show">
+                <div id="Questlist_col" class="row collapse show">
                   <div class="col col-12 col-md-6 col-lg-3">
                     <h5>Side Quests</h5>
                     <ul>
