add pumpkin patch event to quests

--- a/index.html
+++ b/index.html
@@ -2648,6 +2648,10 @@
                   <a href="#The_Way_of_the_Bucket">The Way of the Bucket</a>
                   <span id="quests_nav_totals_1"></span>
                 </li>
+                <li>
+                  <a href="#Pumpkin_Patch_Event">Pumpkin Patch Event</a>
+                  <span id="quests_nav_totals_2"></span>
+                </li>
               </ul>
             </div>
 
@@ -2762,6 +2766,59 @@
                   </li>
                   <li data-id="quests_1_21">
                     Find the Guilded Bucket in Lower Calrath
+                  </li>
+                </ul>
+              </section>
+
+              <section id="Pumpkin_Patch_Event_section">
+                <h3 id="Pumpkin_Patch_Event">
+                  <a
+                    href="#Pumpkin_Patch_Event_col"
+                    data-bs-toggle="collapse"
+                    role="button"
+                    aria-expanded="true"
+                    aria-controls="Pumpkin_Patch_Event_col"
+                    class="btn-collapse"
+                    ><span class="material-icons">expand_more</span></a
+                  >
+                  <a
+                    href="https://thelordsofthefallen.wiki.fextralife.com/Pumpkin+Patch+Event"
+                    target="_blank"
+                    >Pumpkin Patch Event</a
+                  >
+                  <span id="quests_totals_2"></span>
+                </h3>
+                <ul id="Pumpkin_Patch_Event_col" class="collapse show">
+                  <li data-id="quests_2_1">
+                    <b>PREREQUISITE:</b> Defeat the Hushed Saint
+                  </li>
+                  <li data-id="quests_2_2">
+                    Soulflay the Pumpkin Patch Event Stigma at Skyrest Bridge
+                  </li>
+                  <li data-id="quests_2_3">
+                    Soulflay the Pumpkin Patch Event Stigma at the Abandoned
+                    Redcopse
+                  </li>
+                  <li data-id="quests_2_4">
+                    Soulflay the Pumpkin Patch Event Stigma at Pilgrim's Perch
+                  </li>
+                  <li data-id="quests_2_5">
+                    Soulflay the Pumpkin Patch Event Stigma at Fief of the Chill
+                    Curse
+                  </li>
+                  <li data-id="quests_2_6">
+                    Soulflay the Pumpkin Patch Event Stigma at Forsaken Fen
+                  </li>
+                  <li data-id="quests_2_7">
+                    Go to the Hushed Saint's boss arena wearing the Hushed
+                    Saint's Set, aside from the headpiece
+                  </li>
+                  <li data-id="quests_2_8">
+                    Soulflay the final Pumpkin Patch Event Stigma in the boss
+                    arena
+                  </li>
+                  <li data-id="quests_2_9">
+                    Defeat the Spirit of the Bleak Season
                   </li>
                 </ul>
               </section>
