add mirror of distortion and general engstrom's set quests

--- a/index.html
+++ b/index.html
@@ -2652,6 +2652,24 @@
                   <a href="#Pumpkin_Patch_Event">Pumpkin Patch Event</a>
                   <span id="quests_nav_totals_2"></span>
                 </li>
+                <li>
+                  <a href="#Mirror_of_Distortion">Mirror of Distortion</a>
+                  <span id="quests_nav_totals_3"></span>
+                </li>
+                <li>
+                  <a href="#General_Engstroms_Set">General Engstrom's Set</a>
+                  <span id="quests_nav_totals_4"></span>
+                </li>
+                <!-- <li>
+                  <a href="#Illuminator_Aubreys_Set"
+                    >Illuminator Aubrey's Set</a
+                  >
+                  <span id="quests_nav_totals_5"></span>
+                </li> -->
+                <!-- <li>
+                  <a href="#Herald_of_the_Maw_Set">Herald of the Maw Set</a>
+                  <span id="quests_nav_totals_6"></span>
+                </li> -->
               </ul>
             </div>
 
@@ -2822,6 +2840,147 @@
                   </li>
                 </ul>
               </section>
+
+              <section id="Mirror_of_Distortion_section">
+                <h3 id="Mirror_of_Distortion">
+                  <a
+                    href="#Mirror_of_Distortion_col"
+                    data-bs-toggle="collapse"
+                    role="button"
+                    aria-expanded="true"
+                    aria-controls="Mirror_of_Distortion_col"
+                    class="btn-collapse"
+                    ><span class="material-icons">expand_more</span></a
+                  >
+                  <a
+                    href="https://thelordsofthefallen.wiki.fextralife.com/Mirror+of+Distortion"
+                    target="_blank"
+                    >Mirror of Distortion</a
+                  >
+                  <span id="quests_totals_3"></span>
+                </h3>
+                <ul id="Mirror_of_Distortion_col" class="collapse show">
+                  <li data-id="quests_3_1">
+                    Find the first Glass Shard in Lower Calrath
+                  </li>
+                  <li data-id="quests_3_2">
+                    Find the second Glass Shard in the Sunless Skein
+                  </li>
+                  <li data-id="quests_3_3">
+                    Find the final Glass Shard in the Revelation Depths
+                  </li>
+                  <li data-id="quests_3_4">
+                    Place all of the Glass Shards in the Mirror Frame at Skyrest
+                    Bridge
+                  </li>
+                  <li data-id="quests_3_5">Buy a Renewal Knife from Molhu</li>
+                  <li data-id="quests_3_6">
+                    Use the Renewal Knife on the Mirror of Distortion to mold
+                    your form
+                  </li>
+                </ul>
+              </section>
+
+              <section id="General_Engstroms_Set_section">
+                <h3 id="General_Engstroms_Set">
+                  <a
+                    href="#General_Engstroms_Set_col"
+                    data-bs-toggle="collapse"
+                    role="button"
+                    aria-expanded="true"
+                    aria-controls="General_Engstroms_Set_col"
+                    class="btn-collapse"
+                    ><span class="material-icons">expand_more</span></a
+                  >
+                  <a
+                    href="https://thelordsofthefallen.wiki.fextralife.com/General+Engstrom's+Set"
+                    target="_blank"
+                    >General Engstrom's Set</a
+                  >
+                  <span id="quests_totals_4"></span>
+                </h3>
+                <ul id="General_Engstroms_Set_col" class="collapse show">
+                  <li data-id="quests_4_1">
+                    Obtain the Crimson Ritual Fervour, Laughter, and Pledge to
+                    Adyr Gestures
+                  </li>
+                  <li data-id="quests_4_2">
+                    Visit the giant tree in Fitzroy's Gorge and use the Pledge
+                    to Adyr gesture on the tree
+                  </li>
+                  <li data-id="quests_4_3">
+                    Acquire the Wintry Ordnance throwable in Fief of the Chill
+                    Curse and extinguish the first blazing hand
+                  </li>
+                  <li data-id="quests_4_4">
+                    Extinguish the second blazing hand in Fitzroy's Gorge
+                  </li>
+                  <li data-id="quests_4_5">
+                    Extinguish the third blazing hand in Upper Calrath
+                  </li>
+                  <li data-id="quests_4_6">
+                    Extinguish the fourth blazing hand in Bramis Castle
+                  </li>
+                  <li data-id="quests_4_7">
+                    Extinguish the fifth and final blazing hand in Sunless Skein
+                  </li>
+                  <li data-id="quests_4_8">
+                    Return to the giant tree in Fitzroy's Gorge and perform the
+                    Crimson Ritual Fervour Gesture
+                  </li>
+                  <li data-id="quests_4_9">
+                    Defeat General Engstrom to obtain the General Engstrom's Set
+                  </li>
+                </ul>
+              </section>
+
+              <!-- <section id="Illuminator_Aubreys_Set_section">
+                <h3 id="Illuminator_Aubreys_Set">
+                  <a
+                    href="#Illuminator_Aubreys_Set_col"
+                    data-bs-toggle="collapse"
+                    role="button"
+                    aria-expanded="true"
+                    aria-controls="Illuminator_Aubreys_Set_col"
+                    class="btn-collapse"
+                    ><span class="material-icons">expand_more</span></a
+                  >
+                  <a
+                    href="https://thelordsofthefallen.wiki.fextralife.com/Illuminator+Aubrey's+Set"
+                    target="_blank"
+                    >Illuminator Aubrey's Set</a
+                  >
+                  <span id="quests_totals_5"></span>
+                </h3>
+                <ul id="Illuminator_Aubreys_Set_col" class="collapse show">
+                  <li data-id="quests_5_1">
+                    Acquire the Flickering Flail at the Tower of Penance
+                  </li>
+                </ul>
+              </section> -->
+
+              <!-- <section id="Herald_of_the_Maw_Set_section">
+                <h3 id="Herald_of_the_Maw_Set">
+                  <a
+                    href="#Herald_of_the_Maw_Set_col"
+                    data-bs-toggle="collapse"
+                    role="button"
+                    aria-expanded="true"
+                    aria-controls="Herald_of_the_Maw_Set_col"
+                    class="btn-collapse"
+                    ><span class="material-icons">expand_more</span></a
+                  >
+                  <a
+                    href="https://thelordsofthefallen.wiki.fextralife.com/Herald+of+the+Maw+Set"
+                    target="_blank"
+                    >Herald of the Maw Set</a
+                  >
+                  <span id="quests_totals_6"></span>
+                </h3>
+                <ul id="Herald_of_the_Maw_Set_col" class="collapse show">
+                  <li data-id="quests_6_1"></li>
+                </ul>
+              </section> -->
             </div>
           </div>
         </div>
