fix damarose quest in playthrough & nested checkbox indentation

--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
                   <li data-id="playthrough_7_19">
                     Activate the Vestige of Lydia the Numb Witch
                   </li>
-                  <li data-id="playthrough_7_20">
+                  <li data-id="playthrough_7_20" hidden>
                     Give the Infernal Enchantress Flesh to Damarose
                   </li>
                   <li data-id="playthrough_7_21">
@@ -1194,7 +1194,7 @@
                   <li data-id="playthrough_8_10">
                     Give the Giant Eyeball to the Tortured Prisoner
                   </li>
-                  <li data-id="playthrough_8_11">
+                  <li data-id="playthrough_8_11" hidden>
                     Give the Spurned Progeny Flesh to Damarose
                   </li>
                   <li data-id="playthrough_8_12" data-type="equipment">
@@ -2222,16 +2222,16 @@
                   <li data-id="playthrough_20_2">
                     Summon help for the boss fight:
                     <ul>
-                      <li>
+                      <li data-id="playthrough_20_2_1">
                         Summon Andreas for the boss fight to continue his quest
                         (it seems you can summon him and die to the boss and
                         still progress his quest)
                       </li>
-                      <li>
+                      <li data-id="playthrough_20_2_2">
                         Summon Paladin Isaac's for the boss fight to complete
                         his quest
                       </li>
-                      <li>
+                      <li data-id="playthrough_20_2_3">
                         Summon Kukajin for the boss fight to continue her quest
                       </li>
                     </ul>
@@ -2280,7 +2280,8 @@
                     Melchior's Seedpod
                   </li>
                   <li data-id="playthrough_20_16">
-                    Give the Lightreaper Flesh to Damarose (if she's still
+                    Give the Infernal Enchantress Flesh, the Spurned Progeny
+                    Flesh, and the Lightreaper Flesh to Damarose (if she's still
                     alive)
                   </li>
                   <li data-id="playthrough_20_17">
