fix playthrough items for Dunmire's quest

--- a/index.html
+++ b/index.html
@@ -818,7 +818,8 @@
                     Activate the Vestige of Olleren
                   </li>
                   <li data-id="playthrough_5_2">
-                    Give items to Exacter Dunmire
+                    Give the Bloody Aspergillum, the Book of Sin, and the
+                    Hallowed Sentinel Scripture to Dunmire
                   </li>
                   <li data-id="playthrough_5_3">
                     Give the Bowl of Revelations to Molhu
@@ -913,7 +914,7 @@
                   <li data-id="playthrough_5_35">
                     Activate the Vestige of the Pale Butcher
                   </li>
-                  <li data-id="playthrough_5_36">Talk to Exacter Dunmire</li>
+                  <li data-id="playthrough_5_36" hidden>Talk to Dunmire</li>
                   <li data-id="playthrough_5_37">Pay Kukajin's invoice</li>
                   <li data-id="playthrough_5_38" data-type="equipment">
                     Obtain the Panoptic Ring
@@ -982,8 +983,8 @@
                   <li data-id="playthrough_6_14">
                     Activate the Vestige of Betrayed Eliard
                   </li>
-                  <li data-id="playthrough_6_15">
-                    Give items to Exacter Dunmire
+                  <li data-id="playthrough_6_15" hidden>
+                    Give items to Dunmire
                   </li>
                   <li data-id="playthrough_6_16">
                     Give the Cracked Rune Tablet to Gerlinde
@@ -1189,7 +1190,10 @@
                   <li data-id="playthrough_8_7">
                     Activate the Vestige of Doln
                   </li>
-                  <li data-id="playthrough_8_8">Give items to Dunmire</li>
+                  <li data-id="playthrough_8_8">
+                    Give Vanguard Barros' Rosary and Ravager Gregory's Rosary to
+                    Dunmire
+                  </li>
                   <li data-id="playthrough_8_9">Pay Kukajin's invoice</li>
                   <li data-id="playthrough_8_10">
                     Give the Giant Eyeball to the Tortured Prisoner
@@ -1261,7 +1265,9 @@
                   <li data-id="playthrough_9_1">
                     Activate the Vestige of Hooded Antuli
                   </li>
-                  <li data-id="playthrough_9_2">Give items to Dunmire</li>
+                  <li data-id="playthrough_9_2" hidden>
+                    Give items to Dunmire
+                  </li>
                   <li data-id="playthrough_9_3">
                     Give the Chipped Rune Tablet to Gerlinde
                   </li>
@@ -1487,7 +1493,9 @@
                     Activate the Vestige of the Forgotten Guardian
                   </li>
                   <li data-id="playthrough_12_3">Pay Kukajin's invoice</li>
-                  <li data-id="playthrough_12_4">Give items to Dunmire</li>
+                  <li data-id="playthrough_12_4">
+                    Give the Dark Crusader's Call and the Umbral Tome to Dunmire
+                  </li>
                   <li data-id="playthrough_12_5" data-type="equipment">
                     Obtain the Blacksmith's Pride
                   </li>
@@ -1980,7 +1988,8 @@
                     Wisp
                   </li>
                   <li data-id="playthrough_17_24">
-                    Give Dunmire the Perception Wisp
+                    Give the Perception Wisp to Dunmire (buy anything you want
+                    from him first as he will leave after this)
                   </li>
                   <li data-id="playthrough_17_25">
                     Talk to Dunmire at the Sunless Skein
