fix issue with Kukajin's quest

--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
                   <span id="playthrough_totals_8"></span>
                 </h3>
                 <ul id="Upper_Calrath_A_col" class="collapse show">
-                  <li data-id="playthrough_8_1">
+                  <li data-id="playthrough_8_1" hidden>
                     Summon Kukajin for the boss fight
                   </li>
                   <li data-id="playthrough_8_2">Defeat the Spurned Progeny</li>
@@ -1194,7 +1194,9 @@
                     Give Vanguard Barros' Rosary and Ravager Gregory's Rosary to
                     Dunmire
                   </li>
-                  <li data-id="playthrough_8_9">Pay Kukajin's invoice</li>
+                  <li data-id="playthrough_8_9" hidden>
+                    Pay Kukajin's invoice
+                  </li>
                   <li data-id="playthrough_8_10">
                     Give the Giant Eyeball to the Tortured Prisoner
                   </li>
