--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-
-    <script type="text/javascript">
-      var profilesKey = "lotf2023_profiles";
-    </script>
     <script src="js/main.js"></script>
   </head>
 
@@ -97,7 +93,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="tabs" role="tablist">
             <li class="nav-item" role="presentation">
               <button
-                class="nav-link active"
+                class="nav-link"
                 id="home-tab"
                 data-bs-toggle="tab"
                 data-bs-target="#home-tab-pane"
@@ -160,7 +156,7 @@
               >
             </li>
           </ul>
-          <div>
+          <div class="d-flex gap-2">
             <div class="input-group">
               <select
                 id="profiles"
@@ -182,55 +178,71 @@
                 Edit
               </button>
             </div>
+
+            <div class="dropdown">
+              <button
+                class="nav-more-dropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <span class="material-icons">more_vert</span>
+              </button>
+
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li>
+                  <button
+                    class="dropdown-item"
+                    type="button"
+                    id="toggleCollapseAll"
+                  >
+                    Toggle All Sections
+                  </button>
+                </li>
+                <li>
+                  <button
+                    class="dropdown-item"
+                    type="button"
+                    id="toggleCompleted"
+                  >
+                    <span>Show</span><span>Hide</span> Completed
+                  </button>
+                </li>
+                <li>
+                  <button
+                    class="dropdown-item"
+                    type="button"
+                    id="toggleEquipment"
+                  >
+                    <span>Show</span><span>Hide</span> Equipment
+                  </button>
+                </li>
+                <li>
+                  <button
+                    class="dropdown-item"
+                    type="button"
+                    id="resetPlaythrough"
+                  >
+                    Reset Playthrough
+                  </button>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </nav>
 
     <div class="container">
-      <!-- <div class="btn-group" role="group">
-        <div class="btn-group" role="group" data-toggle="buttons">
-          <label class="btn btn-default">
-            <input type="checkbox" id="toggleHideCompleted" />
-            <span class="glyphicon glyphicon-eye-close"></span>
-            <span class="glyphicon glyphicon-eye-open"></span>
-            Hide Completed
-            <a
-              class="btn btn-default btn-sm fadingbutton togglehide"
-              onclick="$('#toggleHideCompleted').click();"
-            >
-              <span class="glyphicon glyphicon-eye-close"></span>
-              <span class="glyphicon glyphicon-eye-open"></span>
-              Hide Completed
-            </a>
-          </label>
-        </div>
-        <div class="btn-group" role="group" data-toggle="buttons">
-          <label class="btn btn-default">
-            <input type="checkbox" id="toggleHideEquipment" />
-            <span class="glyphicon glyphicon-eye-close"></span>
-            <span class="glyphicon glyphicon-eye-open"></span>
-            Hide Equipment
-          </label>
-        </div>
-        <div class="btn-group" role="group" data-toggle="buttons">
-          <label class="btn btn-default">
-            <input type="checkbox" id="toggleCollapseAll" />
-            <span class="glyphicon glyphicon-chevron-up"></span>
-            <span class="glyphicon glyphicon-chevron-down"></span>
-            Collapse All
-          </label>
-        </div>
-      </div> -->
-
-      <div class="tab-content py-4" id="tabsContent">
+      <div class="tab-content" id="tabsContent">
         <div
           id="home-tab-pane"
-          class="tab-pane fade show active"
+          class="tab-pane fade pb-5"
           role="tabpanel"
           aria-labelledby="home-tab"
           tabindex="0"
         >
+          <br />
           <img
             src="img/og.png"
             class="img-fluid w-100"
@@ -299,7 +311,7 @@
                 >HeyKidGables</a
               >, with shoutouts to:
             </p>
-            <ul>
+            <ul class="bullets">
               <li>
                 Alifer for the OG
                 <a
@@ -361,7 +373,6 @@
           <div class="page-layout">
             <div class="table-of-contents">
               <h6>Table of Contents</h6>
-              <hr />
               <ul>
                 <li>
                   <a href="#Defiled_Sepulchre">Defiled Sepulchre</a>
@@ -472,7 +483,7 @@
               </ul>
             </div>
 
-            <div class="page-content">
+            <div class="page-content pt-4 pb-5">
               <h2>
                 Playthrough Checklist
                 <span id="playthrough_overall_total"></span>
@@ -2654,7 +2665,6 @@
           <div class="page-layout">
             <div class="table-of-contents">
               <h6>Table of Contents</h6>
-              <hr />
               <ul>
                 <li>
                   <a href="#The_Way_of_the_Bucket">The Way of the Bucket</a>
@@ -2685,7 +2695,7 @@
               </ul>
             </div>
 
-            <div class="page-content">
+            <div class="page-content pt-4 pb-5">
               <h2>
                 Quests
                 <span id="quests_overall_total"></span>
@@ -3007,7 +3017,6 @@
           <div class="page-layout">
             <div class="table-of-contents">
               <h6>Table of Contents</h6>
-              <hr />
               <ul>
                 <li>
                   <a href="#Weapons">Weapons</a>
@@ -3072,7 +3081,7 @@
               </ul>
             </div>
 
-            <div class="page-content">
+            <div class="page-content pt-4 pb-5">
               <h2>Checklists <span id="checklist_overall_total"></span></h2>
 
               <section id="Weapons_section">
@@ -11205,9 +11214,5 @@
         </div>
       </div>
     </div>
-
-    <!-- <a class="btn btn-default btn-sm fadingbutton back-to-top"
-      >Back to Top&thinsp;<span class="glyphicon glyphicon-arrow-up"></span
-    ></a> -->
   </body>
 </html>
